init blog using jekyll

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-<html>
-	<body>
-	Hello Brian Wu !
-	</body>
-</html>
+---
+layout: default
+title: Home
+---
+<h1>{{ "Hello World!" | downcase }}</h1>
